@@ -1,4 +1,4 @@
-﻿/*
+/*
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
  *  You may obtain a copy of the License at 
@@ -11,23 +11,23 @@
  *  See the License for the specific language governing permissions and
  *  limitations under the License.
  *  
- *   Copyright © 2020 Sebastian Ritter
+ *  Copyright © 2020 Sebastian Ritter
  */
 using System;
-using java = biz.ritter.javapi;
 
-namespace biz.ritter.javapi.lang
+namespace biz.ritter.javapi.lang.annotation
 {
-    [Serializable]
-    public class LinkageError : Error {
 
-        private static readonly long serialVersionUID = 3579600108157160122L;
-
-        public LinkageError() :base(){}
-
-        public LinkageError(String detailMessage):base(detailMessage) {
+    public class IncompleteAnnotationException : RuntimeException
+    {
+        private readonly Annotation type;
+        private readonly String name;
+        public IncompleteAnnotationException(Annotation reason, String elementName) : base() { 
+            this.type = reason;
+            this.name = elementName;
         }
-        public LinkageError(String detailMessage, Throwable cause):base(detailMessage,cause) {
-        }
+
+        public String elementName()=> this.name;
+        public Annotation annotationType => this.type;
     }
 }
